v 1.3 реализация search, правки POSTMAN