@@ -1,23 +1,19 @@
 package ru.yandex.practicum.filmorate.controller;
 
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Positive;
 import lombok.RequiredArgsConstructor;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.service.FilmService;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 import java.util.List;
 import java.util.Arrays;
 
+@Validated
 @RequiredArgsConstructor
 @RestController
 @RequestMapping("/films")
@@ -25,7 +21,7 @@ public class FilmController {
     private final FilmService filmService;
 
     @GetMapping("/{id}")
-    public Film getFilm(@PathVariable Long id) {
+    public Film getFilm(@PathVariable @Positive Long id) {
         return filmService.getFilm(id);
     }
 
@@ -36,8 +32,8 @@ public class FilmController {
 
     @GetMapping("/common")
     public List<Film> getCommonLikedFilms(
-            @RequestParam Long userId,
-            @RequestParam Long friendId) {
+            @RequestParam @Positive Long userId,
+            @RequestParam @Positive Long friendId) {
         return filmService.findCommonFilms(userId, friendId);
     }
 
@@ -53,20 +49,38 @@ public class FilmController {
 
     @GetMapping("/director/{directorId}")
     public Collection<Film> getListDirectorFilms(
-            @PathVariable long directorId,
+            @PathVariable @Positive long directorId,
             @RequestParam(defaultValue = "likes") String sortBy) {
-
         return filmService.getListDirectorFilms(directorId, sortBy);
     }
 
     @GetMapping("/search")
     public Collection<Film> searchFilms(
-            @RequestParam String query,
-            @RequestParam String by) {
-        List<String> byList = Arrays.stream(by.split(","))
+            @RequestParam(name = "query") @NotBlank String query,    // ► проверяем, что не пусто
+            @RequestParam(name = "by")    @NotBlank String by        // ► проверяем, что не пусто
+    ) {
+        var byList = Arrays.stream(by.split(","))
                 .map(String::trim)
                 .map(String::toLowerCase)
-                .collect(Collectors.toList());
+                .toList();
         return filmService.search(query, byList);
+    }
+
+    // Добавление лайка фильму
+    @PutMapping("/{filmId}/like/{userId}")
+    public void addLike(
+            @PathVariable @Positive Long filmId,
+            @PathVariable @Positive Long userId
+    ) {
+        filmService.addLike(filmId, userId);
+    }
+
+    // Удаление лайка у фильма
+    @DeleteMapping("/{filmId}/like/{userId}")
+    public void removeLike(
+            @PathVariable @Positive Long filmId,
+            @PathVariable @Positive Long userId
+    ) {
+        filmService.removeLike(filmId, userId);
     }
 }
